syntax = "proto3";

service GrpcApi {
  rpc GetInitialReelInfo(GetInitialReelInfoReq) returns (GetInitialReelInfoRes) {}
  rpc Bet(BetReq) returns (BetRes) {}
}

// grpc 求Y
message GetInitialReelInfoReq {
}

message GetInitialReelInfoRes {  
  message Reels {
    string bGs = 1; // 一般[L表(共五份[][]int64)
    string fGs = 2; // 免M[L表(共五份[][]int64)
  }

  message Result {
    string version = 1; // L表版
    Reels reels = 2;  // L表
    repeated int64 position = 3;  // 初始 index
    string randPositionList = 4; // 50M]中的位置(betType=1的情r)
  }

  Result result = 1;
}

message BetReq {
 int64 multiple = 1 ;    // 下注倍率
 int64 ante = 2 ;    // 下注底分
 double expectRTP = 3 ; // 期望RTP
 int64 maxCompensation = 4 ; // 天U
 int64 outcomeMultiple = 5 ; // 得分倍率(若o填1)
 bool isBaseGameNotHit = 6; // 必_]得分的一般[,不MFG
 bool isBaseGameHit = 7;    // 必_有得分的一般[,不MFG
 bool isFreeGameNotHit = 8; // 必_免M[,H_保底低倍率情r
 bool isFreeGameHit = 9;    // 必_免M[,正常度

}

message BetRes {

  message Winwaylist {
      int64 x = 1;  // 每中迪喑酸岬闹
      int64 lineNum = 2;  // 表示走B
      int64 winNum = 3; // 中D
      int64 winBonus = 4; // 此B中彩金
      string singlePos = 5;  // 此D酥歇位置[5][3],值0(]中)或1(中)
  }

  message Scatter {
      int64 winNum = 1; // 中D
      int64 count = 2;  // scatter
      int64 winBonus = 3; // 此B彩金
      string scatterPos = 4; // scatter位置[5][3],值0(]s)或1(有s)
  }

  message Jackpot {
      int64 winNum = 1; // 中JackpotD
      int64 winBonus = 2; // 此JackpotD瞬式
      repeated int64 jPTable = 3; // 15的Jackpot位置排序
  }

  message Resultlist {
      repeated int64 randomNumList = 1; // 停位置(正中g的LЬ,5x3面的正中g那)
      string reels = 2;  // 此次停後的P面(P面大小5x3)
      string totalHitPosition = 3; // 此停所有D酥歇位置[5][3],]中=0,中=1
      int64 totalWinBonus = 4; // 此次停彩金
      repeated Winwaylist winWayList = 5; // 此次停各B息
      Scatter scatter = 6;  // Scatter的中息
      Jackpot jackpot = 7;  // 中的Jackpot情
  }

  message Result {
      int64 currentCash = 1;  // 目前所持有金~
      string version = 2; // L表版本
      int64 totalBet = 3; // 押注
      int64 ante = 4; // BG下注r的底注
      int64 multiple = 5; // BG下注r的倍率
      int64 OutcomeMultiple = 6;  // 得分倍率(若o填1)
      bool fgEnable = 7;  // 是否M入 FG
      repeated int64 fgLevelList = 8; // 可以x竦 FG 列表
      int64 fgLevelChoose = 9;  // x竦 FG 底 ,值域[1,5]
      string allReels = 10;  // 各停P面[1 or N][5][5]
      repeated Resultlist resultList = 11;  // 各停Y
      int64 totalBonus = 12;  // r付
  }

  Result result = 1;
}